syntax = "proto3";

option go_package = "./ecommercepb";

service ProductInfo {
  rpc addProduct(Product) returns (ProductID);
  rpc getProduct(ProductID) returns (Product);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductID {
  string value = 1;
}

/*
protoc -I ./proto --go_out=./server  \
    --go-grpc_out=./server \
    product_info.proto

-I es el import path, donde buscar los import que tiene dentro
 */